Stable versions
---------------

4.7.0 (?):
	Changes by Alice Rowan:
	- Increase maximum sampling rate (XMP_MAX_SRATE) to 768000.
	- New API define: XMP_FORMAT_32BIT for xmp_start_player to enable
	  32-bit integer output.
	- New API define: XMP_INST_NO_DEFAULT_PAN for xmp_subinstrument::pan
	- New API defines: XMP_MARK_SKIP and XMP_MARK_END for xmp_module::xxo
	- Add support for Pack-Ice ("Ice!", "ICE!") depacking.
	- Add support for Software Visions DMF (Apocalypse Abyss MOD variant).
	- Replace kernel list helper in iff.c with custom list management
	  to fix numerous otherwise unfixable KallistiOS redefinition warnings.
	- All internal module time/duration calculations are now in doubles
	  (fixes off-by-one module time on final tick of some modules).
	- IFF format loading is now more permissive toward errors in the IFF
	  tag structure, fixing some broken modules that would load for 64-bit
	  Linux builds but not for Windows.
	- Fix sample name, restart position, note 0 loading, and pattern count
	  calculation for Images Music System modules.
	- Fix XM volume effects cxx/dxx accidentally having effects memory.
	- Fix FAR volume and note edge cases (Prescience/aurora.far pos. 16).
	- Fix Real Tracker RTM maximum pattern row count, various effects
	  translations, initial panning and sample panning, sample base volume,
	  non-delta coded samples, and instrument flags.
	- Correct default of sample default panning values to -1 (no default
	  panning) for most module formats.
	- Fix DigiBooster Pro sample default panning.
	- Fix DigiBooster Pro note 0x1f (key off) and misc. other tidying.
	- Fix Funktracker sample default panning.
	- Fix FunkTracker Fk** and DOS32 initial channel panning.
	- Fix FunkTracker notes 0x3d (partial fix) and 0x3e.
	- Fix FunkTracker injecting sample default volume into events, causing
	  most notes to play at slightly wrong volumes.
	- Fix Galaxy Music System 4.0 sample default panning.
	- Fix Imago Orpheus IMF sample default panning.